[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icons/react.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/close.png" type="Texture" id=2]
[ext_resource path="res://prefabs/ui/game/ship_movement/movement_target.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/car-arrow-right.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/shield-lock-outline.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/planet.png" type="Texture" id=6]

[node name="MovementTarget" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="HBoxContainer" parent="."]
margin_top = 246.0
margin_right = 480.0
margin_bottom = 270.0

[node name="BtnToGalaxy" type="TextureButton" parent="Actions"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )

[node name="BtnToPlanetSystem" type="TextureButton" parent="Actions"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0
texture_normal = ExtResource( 6 )

[node name="Control" type="Control" parent="Actions"]
margin_left = 56.0
margin_right = 424.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_horizontal = 3

[node name="BtnCancel" type="TextureButton" parent="Actions"]
margin_left = 428.0
margin_right = 452.0
margin_bottom = 24.0
texture_normal = ExtResource( 2 )

[node name="BtnConfirm" type="TextureButton" parent="Actions"]
margin_left = 456.0
margin_right = 480.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
[connection signal="pressed" from="Actions/BtnToGalaxy" to="." method="_on_to_galaxy" flags=3]
[connection signal="pressed" from="Actions/BtnToPlanetSystem" to="." method="_on_to_planet_system" flags=3]
[connection signal="pressed" from="Actions/BtnCancel" to="." method="_on_cancel" flags=3]
[connection signal="pressed" from="Actions/BtnConfirm" to="." method="_on_confirm" flags=3]
